--- a/CSS/style.css
+++ b/CSS/style.css
@@ -24,3 +24,9 @@ h3 {
     text-align: center;
     font-weight: bolder;
 }
+ol {
+    text-align: center;
+    font-size: larger;
+    font-style: oblique;
+    margin-bottom: 100px;
+}
